// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex snapshot should match snapshot 1`] = `
<Flex>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with alignContent 1`] = `
<Flex
  alignContent="center"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-center md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with alignItems 1`] = `
<Flex
  alignItems="center"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with className 1`] = `
<Flex
  className="example-class"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap example-class"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with id 1`] = `
<Flex
  id="example-id"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    id="example-id"
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with justifyContent 1`] = `
<Flex
  justifyContent="center"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-center md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with style 1`] = `
<Flex
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
        "color": "pink",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with wrap 1`] = `
<Flex
  wrap="wrap-reverse"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-wrap-reverse"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with xgap 1`] = `
<Flex
  xgap="1rem"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": "1rem",
        "--md-globals-flex-ygap-size": undefined,
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with ygap 1`] = `
<Flex
  ygap="1rem"
>
  <div
    className="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-flex-start md-flex-align-content-flex-start md-flex-nowrap"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--md-globals-flex-xgap-size": undefined,
        "--md-globals-flex-ygap-size": "1rem",
      }
    }
  >
    Test
  </div>
</Flex>
`;
